@@ -7,3 +7,4 @@ config.status
 Makefile
 stamp-h1
 *.gz
+*.gladep
