@@ -773,6 +773,53 @@
 			  <property name="homogeneous">True</property>
 			</packing>
 		      </child>
+
+		      <child>
+			<widget class="GtkSeparatorToolItem" id="separatortoolitem6">
+			  <property name="visible">True</property>
+			  <property name="draw">True</property>
+			  <property name="visible_horizontal">True</property>
+			  <property name="visible_vertical">True</property>
+			</widget>
+			<packing>
+			  <property name="expand">False</property>
+			  <property name="homogeneous">False</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkToolButton" id="toolbutton8">
+			  <property name="visible">True</property>
+			  <property name="sensitive">False</property>
+			  <property name="tooltip" translatable="yes">Move audio track up</property>
+			  <property name="stock_id">gtk-go-up</property>
+			  <property name="visible_horizontal">True</property>
+			  <property name="visible_vertical">True</property>
+			  <property name="is_important">False</property>
+			  <signal name="clicked" handler="gnomebaker_on_up" last_modification_time="Tue, 16 Aug 2005 22:14:06 GMT"/>
+			</widget>
+			<packing>
+			  <property name="expand">False</property>
+			  <property name="homogeneous">True</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkToolButton" id="toolbutton9">
+			  <property name="visible">True</property>
+			  <property name="sensitive">False</property>
+			  <property name="tooltip" translatable="yes">Move audio track down</property>
+			  <property name="stock_id">gtk-go-down</property>
+			  <property name="visible_horizontal">True</property>
+			  <property name="visible_vertical">True</property>
+			  <property name="is_important">False</property>
+			  <signal name="clicked" handler="gnomebaker_on_down" last_modification_time="Tue, 16 Aug 2005 22:14:20 GMT"/>
+			</widget>
+			<packing>
+			  <property name="expand">False</property>
+			  <property name="homogeneous">True</property>
+			</packing>
+		      </child>
 		    </widget>
 		    <packing>
 		      <property name="padding">0</property>
@@ -790,6 +837,7 @@
 		      <property name="tab_pos">GTK_POS_TOP</property>
 		      <property name="scrollable">False</property>
 		      <property name="enable_popup">False</property>
+		      <signal name="switch_page" handler="gnomebaker_on_notebook_switch_page" last_modification_time="Tue, 16 Aug 2005 21:44:21 GMT"/>
 
 		      <child>
 			<widget class="GtkVBox" id="vbox9">
